css/v2.css
/* ... */
  @media (max-width: 767px) {
    body {
      width: 100%;
      min-width: 100%;
      background: #fff;
      padding-top: 50px; } }

#components-index ul.nav > li > a {
  background-color: #F9FAFB; }

.improve-docs {
  position: absolute;
  right: 3.5em;
  top: 8em; }

.docs-container .side-nav {
  width: 230px;
  padding-top: 73px; }

.docs-container > main {
  margin-left: 230px; }

.docs-container > aside {
  width: 467px; }
  .docs-container > aside + main {
    margin-right: 467px; }

@media (max-width: 991px) {
  .docs-container aside {
    display: none; }
    .docs-container aside + main {
      margin-right: 0; } }

@media (max-width: 767px) {
  .docs-container {
    background-color: #fff; }
    .docs-container main {
      margin-left: 0;
      padding: 30px 20px; }
    .docs-container #side-nav {
      padding-top: 0;
      top: 50px;
      z-index: 1;
      -webkit-transform: translateX(-230px);
          -ms-transform: translateX(-230px);
              transform: translateX(-230px);
      transition: -webkit-transform .3s ease;
      transition: transform .3s ease; }
      .docs-container #side-nav.shown {
        -webkit-transform: translateX(0);
            -ms-transform: translateX(0);
                transform: translateX(0);
        box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5); } }

.navbar-default {
  background: linear-gradient(to right, #3071da, #4888f1);
  border-radius: 0;
  border: none;
  margin-bottom: 0;
  position: relative;
  z-index: 10; }
  @media (max-width: 767px) {
    .navbar-default {
      position: fixed;
      top: 0;
      width: 100%; } }
  .navbar-default .navbar-brand {
    padding: 22px 0 0 20px; }
    @media (max-width: 767px) {
      .navbar-default .navbar-brand {
        padding-top: 8px; } }
    .navbar-default .navbar-brand img {
      width: 140px; }
  .navbar-default .navbar-nav > li > a {
    padding: 27px 15px;
    transition: .2s color;
    border-top: 3px solid transparent; }
    @media (max-width: 991px) {
      .navbar-default .navbar-nav > li > a {
        padding-left: 10px;
        padding-right: 10px; } }
    @media (max-width: 767px) {
      .navbar-default .navbar-nav > li > a {
        padding: 15px;
        border: none; } }
  .navbar-default .navbar-nav > li.active > a {
    border-top-color: white; }
  .navbar-default .dropdown .dropdown-menu {
    display: block;
    visibility: 0;
    opacity: 0;
    -webkit-transform: scaleY(0);
        -ms-transform: scaleY(0);
            transform: scaleY(0);
    -webkit-transform-origin: top;
        -ms-transform-origin: top;
            transform-origin: top;
    transition: -webkit-transform .3s ease, opacity .3s;
    transition: transform .3s ease, opacity .3s; }
  .navbar-default .dropdown.open .dropdown-menu {
    visibility: 1;
    opacity: 1;
    -webkit-transform: scaleY(1);
        -ms-transform: scaleY(1);
            transform: scaleY(1); }
  .navbar-default .navbar-form {
    margin: 22px 0 0 100px; }
    @media (max-width: 991px) {
      .navbar-default .navbar-form {
        margin-left: 25px; } }
    @media (max-width: 767px) {
      .navbar-default .navbar-form {
        margin-left: 0; } }
    .navbar-default .navbar-form .form-group {
      position: relative;
      padding-left: 15px; }
      .navbar-default .navbar-form .form-group input {
        background: transparent;
        box-shadow: none;
        border: none;
        color: white;
        font-size: 14px; }
        .navbar-default .navbar-form .form-group input::-webkit-input-placeholder {
          color: #98befa; }
        .navbar-default .navbar-form .form-group input:-moz-placeholder {
          color: #98befa; }
        .navbar-default .navbar-form .form-group input::-moz-placeholder {
          color: #98befa; }
        .navbar-default .navbar-form .form-group input:-ms-input-placeholder {
          color: #98befa; }
      .navbar-default .navbar-form .form-group:before {
        font-family: "Ionicons";
        -webkit-font-smoothing: antialiased;
        content: "\f4a5";
        font-size: 18px;
        font-weight: 800;
        color: #98befa;
        position: absolute;
        top: 4px;
        left: 0; }
  .navbar-default .navbar-toggle,
  .navbar-default .sidebar-toggle {
    border: none;
    position: relative;
    background: transparent; }
    .navbar-default .navbar-toggle i,
    .navbar-default .sidebar-toggle i {
      position: absolute;
      font-size: 27px;
      top: -3px;
      color: #b2c8f7;
      transition: color .3s, -webkit-transform .3s, opacity .3s;
      transition: color .3s, transform .3s, opacity .3s; }
    .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:active, .navbar-default .navbar-toggle:focus,
    .navbar-default .sidebar-toggle:hover,
    .navbar-default .sidebar-toggle:active,
    .navbar-default .sidebar-toggle:focus {
      background: transparent;
      outline: none; }
      .navbar-default .navbar-toggle:hover i, .navbar-default .navbar-toggle:active i, .navbar-default .navbar-toggle:focus i,
      .navbar-default .sidebar-toggle:hover i,
      .navbar-default .sidebar-toggle:active i,
      .navbar-default .sidebar-toggle:focus i {
        color: white;
        -webkit-transform: scale(1.05);
            -ms-transform: scale(1.05);
                transform: scale(1.05); }
    .navbar-default .navbar-toggle .ion-md-close,
    .navbar-default .sidebar-toggle .ion-md-close {
      opacity: 0; }
    .navbar-default .navbar-toggle.active i,
    .navbar-default .sidebar-toggle.active i {
      -webkit-transform: rotate(90deg);
          -ms-transform: rotate(90deg);
              transform: rotate(90deg); }
    .navbar-default .navbar-toggle.active i:not(.ion-md-close),
    .navbar-default .sidebar-toggle.active i:not(.ion-md-close) {
      opacity: 0; }
/* ... */

